# drf-event-booking

./: pyproject.toml
bookings/: models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
events/: exceptions.py  filters.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_remove_event_state_event_open.py
seat_grades/: apps.py  models.py  serializers.py
seat_grades/migrations/: 0001_initial.py
seats/: apps.py  models.py  serializers.py  urls.py  views.py
seats/migrations/: 0001_initial.py  0002_alter_seat_slot.py  0003_seat_state.py  0004_alter_seat_booking.py
slots/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
slots/migrations/: 0001_initial.py  0002_alter_slot_event.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
